# NotesPlus

./: pyproject.toml
Backend/: requirements.txt
Backend/Main/: settings.py
