[project]
name = "notesplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
